# KaakdiLauncher

./: .gitignore  CMakeLists.txt  CarouselDelegate.qml  Config.cpp  Config.h  GameCarousel.qml  GameFileObj.h  GlassPopup.qml  GridFrame.qml  InfoPopup.qml  Main.qml  README.md  Resources.qrc  SearchPopup.qml  SplashScreen.qml  TopNavBar.qml  appcore.cpp  librarymanager.cpp  librarymanager.h  uimanager.cpp  uimanager.h
config/: config.json
qml/: GameCarousel.qml  InfoPopup.qml  Main.qml  NavButtonDelegate.qml  SplashScreen.qml  TopNavBar.qml
src/: GameFileObj.h  appcore.h  librarymanager.cpp  librarymanager.h  main.cpp  uimanager.cpp
